--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,11 +1,12 @@
+$purple: #13051f;
 /**
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
+    background-color: $purple;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
