--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,3 @@
-$purple: #13051f;
 /**
  * Site header
  */
@@ -93,6 +92,7 @@ $purple: #13051f;
  * Site footer
  */
 .site-footer {
+    background: $purple;
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
@@ -127,13 +127,13 @@ $purple: #13051f;
 }
 
 .footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(40% - (#{$spacing-unit} / 2));
+    width:         calc(40% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(25% - (#{$spacing-unit} / 2));
+    width:         calc(25% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
