First post, working downloads, etc

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,8 @@ layout: default
   </header>
 
   <article class="post-content">
+    <audio src="{{ page.link }}" controls></audio>
+    <p><strong><a href="{{ page.link }}"> Download the episode (MP3)</a></strong></p>
     {{ content }}
   </article>
 
