--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="footer-col  footer-col-2">
-        <p>Michael R. Bernstein (@mrb_bk) is obsessed. He lives in College Park, MD and spends most of his time scheming on how to acquire as many obscure LPs, outrageous meals, and arcane computer science books as possible.</p>
+        <p><strong>Michael R. Bernstein (@mrb_bk)</strong> is obsessed. He lives in College Park, MD and spends most of his time scheming on how to acquire as many obscure LPs, outrageous meals, and arcane computer science books as possible.</p>
       </div>
       <div class="footer-col  footer-col-3">
         <p><a href="http://michaelrbernste.in">http://michaelrbernste.in</a></p>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="footer-col  footer-col-2">
-        <p>Aaron Quint (@aq) lives and works in Kingston, NY. He’s obsessed with the basic idea that you can make anything from scratch. He’s spent the past decade writing code for the web and learning everything he can about food and cooking. </p>
+        <p><strong>Aaron Quint (@aq)</strong> lives and works in Kingston, NY. He’s obsessed with the basic idea that you can make anything from scratch. He’s spent the past decade writing code for the web and learning everything he can about food and cooking. </p>
       </div>
       <div class="footer-col  footer-col-3">
         <p><a href="http://www.quirkey.com">http://www.quirkey.com</a></p>
