--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,20 @@
               <span class="username">{{ site.twitter_username }}</span>
             </a>
       </div>
+      <!-- Begin MailChimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="//paperlesspost.us2.list-manage.com/subscribe/post?u=2691c0540e97f872a72ca0e9a&amp;id=34910cde1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_2691c0540e97f872a72ca0e9a_34910cde1b" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
   </div>
 
 </header>
