--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,17 +21,16 @@
       </div>
       <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
-<form action="//paperlesspost.us2.list-manage.com/subscribe/post?u=2691c0540e97f872a72ca0e9a&amp;id=34910cde1b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="//beatsryetypes.us10.list-manage.com/subscribe/post?u=d2857e2d2f722f4d89523b3e3&amp;id=2b70b18921" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<label for="mce-EMAIL">Subscribe to our mailing list</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_2691c0540e97f872a72ca0e9a_34910cde1b" tabindex="-1" value=""></div>
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_d2857e2d2f722f4d89523b3e3_2b70b18921" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
-
 <!--End mc_embed_signup-->
   </div>
 
