Use feedburner url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 
     <div class="description">
       <p>{{site.description}}</p>
-      <div class="rss-subscribe"><a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a></div>
+      <div class="rss-subscribe"><a href="http://feeds.feedburner.com/BeatsRyeTypes">Subscribe</a></div>
             <a href="https://twitter.com/{{ site.twitter_username }}">
               <span class="icon  icon--twitter">
                 <svg viewBox="0 0 16 16">
