--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,12 @@
 
     <div class="description">
       <p>{{site.description}}</p>
-      <div class="rss-subscribe"><a href="http://feeds.feedburner.com/BeatsRyeTypes">Subscribe</a></div>
-            <a href="https://twitter.com/{{ site.twitter_username }}">
+
+      <div class="rss-subscribe">
+        <a href="http://feeds.feedburner.com/BeatsRyeTypes">Subscribe <img src="/images/feed-icon-28x28.png" alt="feed" /></a>
+        <a href="https://itunes.apple.com/us/podcast/beats-rye-types/id963582847?mt=2&uo=4" target="itunes_store" style="display:inline-block;vertical-align:middle;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_subscribe-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_subscribe-lrg.svg);}"></a>
+      </div>
+      <a href="https://twitter.com/{{ site.twitter_username }}">
               <span class="icon  icon--twitter">
                 <svg viewBox="0 0 16 16">
                   <path fill="#828282" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
