--- a/css/main.scss
+++ b/css/main.scss
@@ -149,7 +149,7 @@ body.pizza {
     input[type=submit] {
       font-weight: bold;
       font-size: 18px;
-      width: 100%
+      width: 100%;
       background: #b11a00;
       padding: 4px 10px;
       border: none;
