--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,7 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 $yellow: #fbd78a;
-$purple: #13051f;
+$purple: rgb(27,6,40);
 $green: #79b838;
 
 $brand-color: $green;
