--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="footer-col  footer-col-2">
-        <p><strong>Michael R. Bernstein (@mrb_bk)</strong> is obsessed. He lives in College Park, MD and spends most of his time scheming on how to acquire as many obscure LPs, outrageous meals, and arcane computer science books as possible.</p>
+        <p><strong>Michael R. Bernstein (@mrb_bk)</strong> loves you. He lives in Takoma Park, MD and spends most of his time thinking about pottery, obscure LPs, food, and the intersection of philosophy and Computer Science.</p>
       </div>
       <div class="footer-col  footer-col-3">
         <p><a href="http://michaelrbernste.in">http://michaelrbernste.in</a></p>
