--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,9 +5,9 @@
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
-    background-color: $purple;
+    background-color: $red;
     // Positioning context for the mobile navigation icon
-    position: relative;
+    @extend %clearfix;
 }
 
 .site-title {
@@ -163,7 +163,7 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    padding: $spacing-unit;
 }
 
 .page-heading {
