--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,41 +1,5 @@
 <header class="site-header">
-  <div class="wrapper">
-
     <a class="site-title" href="{{ site.baseurl }}/">
-      <img width="300" src="/images/logo-600.png" alt="{{ site.title }}" />
+      <img src="/images/brt-art-blakely-header.png" alt="Beats, Rye & Types" />
     </a>
-
-    <div class="description">
-      <p>{{site.description}}</p>
-
-      <div class="rss-subscribe">
-        <a href="http://feeds.feedburner.com/BeatsRyeTypes">Subscribe <img src="/images/feed-icon-28x28.png" alt="feed" /></a>
-        <a href="https://itunes.apple.com/us/podcast/beats-rye-types/id963582847?mt=2&uo=4" target="itunes_store" style="display:inline-block;vertical-align:middle;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_subscribe-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_subscribe-lrg.svg);}"></a>
-      </div>
-      <a href="https://twitter.com/{{ site.twitter_username }}">
-              <span class="icon  icon--twitter">
-                <svg viewBox="0 0 16 16">
-                  <path fill="#828282" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
-                  c-0.632,0.375-1.332,0.647-2.076,0.793c-0.596-0.636-1.446-1.033-2.387-1.033c-1.806,0-3.27,1.464-3.27,3.27 c0,0.256,0.029,0.506,0.085,0.745C5.163,5.404,2.753,4.102,1.14,2.124C0.859,2.607,0.698,3.168,0.698,3.767 c0,1.134,0.577,2.135,1.455,2.722C1.616,6.472,1.112,6.325,0.671,6.08c0,0.014,0,0.027,0,0.041c0,1.584,1.127,2.906,2.623,3.206 C3.02,9.402,2.731,9.442,2.433,9.442c-0.211,0-0.416-0.021-0.615-0.059c0.416,1.299,1.624,2.245,3.055,2.271 c-1.119,0.877-2.529,1.4-4.061,1.4c-0.264,0-0.524-0.015-0.78-0.046c1.447,0.928,3.166,1.469,5.013,1.469 c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/>
-                </svg>
-              </span>
-
-              <span class="username">{{ site.twitter_username }}</span>
-            </a>
-      </div>
-      <!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="//beatsryetypes.us10.list-manage.com/subscribe/post?u=d2857e2d2f722f4d89523b3e3&amp;id=2b70b18921" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to our mailing list</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_d2857e2d2f722f4d89523b3e3_2b70b18921" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-<!--End mc_embed_signup-->
-  </div>
-
 </header>
