--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,6 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -26,12 +25,14 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
+$side-width:       300px;
 
 $yellow: #fbd78a;
 $purple: rgb(27,6,40);
+$red: #e62621;
 $green: #79b838;
 
-$brand-color: $green;
+$brand-color: #333;
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
@@ -41,18 +42,18 @@ $brand-color: $green;
 //     }
 // }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+  @media screen and (max-width: $device) {
+    @content;
+  }
 }
 
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "syntax-highlighting"
+"base",
+"layout",
+"syntax-highlighting"
 ;
 
 
@@ -64,7 +65,7 @@ $brand-color: $green;
   text-align: right;
   p {
     padding-top: 20px;
-  font-style: italic;
+    font-style: italic;
   }
   a:hover {
     color: white;
@@ -125,16 +126,16 @@ body.pizza {
     background: url(/images/main-bg.png) repeat transparent;
   }
   .desc {
-      float: left;
-      width: 370px;
-      padding-right: 50px;
+    float: left;
+    width: 370px;
+    padding-right: 50px;
   }
   .signup {
-      text-align: left;
-      font-size: 18px;
-      float: left;
-      width: 350px;
-      font-weight: bold;
+    text-align: left;
+    font-size: 18px;
+    float: left;
+    width: 350px;
+    font-weight: bold;
   }
   footer {
     clear: both;
@@ -158,17 +159,17 @@ body.pizza {
   }
 }
 
- @include media-query($on-palm) {
-   body.pizza {
-      .main {
-        width: 320px;
-        margin: 0px 20px;
-      }
-      .main h1 img {
-        width: 100%;
-      }
-      .desc, .signup {
-        width: 325px;
-      }
+@include media-query($on-palm) {
+  body.pizza {
+    .main {
+      width: 320px;
+      margin: 0px 20px;
     }
- }
+    .main h1 img {
+      width: 100%;
+    }
+    .desc, .signup {
+      width: 325px;
+    }
+  }
+}
