--- a/_includes/mailchimp.html
+++ b/_includes/mailchimp.html
@@ -1,13 +1,28 @@
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
 <form action="//beatsryetypes.us10.list-manage.com/subscribe/post?u=d2857e2d2f722f4d89523b3e3&amp;id=2b70b18921" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+  <span class="icon icon--email">
+<svg viewBox="25 -10 54 76">
+  <g id="g3763">
+    <rect
+       y="-8.8813553"
+       x="3.4237289"
+       id="rect4"
+       rx="0"
+       height="59.898304"
+       width="80.669495" />
+    <path
+       id="path6"
+       d="M 3,-9 H 85 V 51 H 3 z m 0,0 37,37 q 4,3 8,0 L 85,-9 M 3,51 33,21 m 22,0 30,30"
+       inkscape:connector-curvature="0"
+       style="stroke:#ffffff;stroke-width:6" />
+  </g>
+</svg>
+</span>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_d2857e2d2f722f4d89523b3e3_2b70b18921" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
+    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
 </form>
 </div>
 <!--End mc_embed_signup-->
