--- a/_includes/signup_links.html
+++ b/_includes/signup_links.html
@@ -1,11 +1,14 @@
-<div class="description">
-  <p>{{site.description}}</p>
-</div>
-
-<div class="rss-subscribe">
-  <a href="http://feeds.feedburner.com/BeatsRyeTypes">Subscribe <img src="/images/feed-icon-28x28.png" alt="feed" /></a>
-  <a href="https://itunes.apple.com/us/podcast/beats-rye-types/id963582847?mt=2&uo=4" target="itunes_store" style="display:inline-block;vertical-align:middle;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_subscribe-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_subscribe-lrg.svg);}"></a>
-</div>
-
+  <div class="patreon">
+    <p>
+    We keep the show weekly and ad-free
+    with the support of our listeners. <br/>
+    <a href="https://www.patreon.com/beatsryetypes">Fund our work through Patreon.</a>
+    </p>
+  </div>
+<div class="signup">
+{% include itunes.html %}
 {% include twitter.html %}
+{% include facebook.html %}
+{% include rss.html %}
 {% include mailchimp.html %}
+</div>
