--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,17 @@
   <body>
     {% include header.html %}
 
-    <div class="page-content">
-      {{ content }}
-    </div>
-    <div class="sidebar">
-      {% include signup_links.html %}
+    <div class="content">
+      <div class="page-content">
+        {{ content }}
+      </div>
+      <div class="sidebar">
+        <div class="description">
+          <p>{{site.description}}</p>
+        </div>
+        {% include signup_links.html %}
+        {% include about.html %}
+      </div>
     </div>
 
     {% include footer.html %}
