Working on the homepage

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,9 @@
 <footer class="site-footer">
-    <div class="copy">{{site.copyright}}</div>
-
+  <ul>
+    <li>{% include itunes.html %}</li>
+    <li>{% include twitter.html %}</li>
+    <li>{% include facebook.html %}</li>
+    <li>{% include rss.html %}</li>
+  <div class="copy">{{site.copyright}}</div>
+  </ul>
 </footer>
