--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
     <a class="site-title" href="{{ site.baseurl }}/">
-      <img src="/images/brt-art-blakely-header.png" alt="Beats, Rye & Types" />
+      <img src="/images/brt-art-blakely-header.png" height="180" alt="Beats, Rye & Types" />
     </a>
 </header>
