--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -92,9 +92,8 @@
  * Site footer
  */
 .site-footer {
-    background: $purple;
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    background: #000;
+    padding: 10px;
 }
 
 .footer-heading {
