--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="http://feeds.feedburner.com/BeatsRyeTypes" />
+  <link rel="icon" type="image/png" href="/images/brt-icon.png">
 </head>
