--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     20px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
@@ -29,11 +29,11 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    600px;
+$sidebar-width:    200px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-$sidebar-width:       300px;
 
 $yellow: #fbd78a;
 $purple: rgb(27,6,40);
@@ -145,6 +145,7 @@ h1, h2 {
   .about {
     .bio {
       font-size: 80%;
+      @extend %clearfix;
       img {
         float: right;
         padding: 5px;
@@ -176,11 +177,11 @@ h1, h2 {
   }
 }
 
-  h3.divider {
-    font-weight: bold;
-    font-style: italic;
-    border-bottom: 1px solid #E5E5E5;
-  }
+h3.divider {
+  font-weight: bold;
+  font-style: italic;
+  border-bottom: 1px solid #E5E5E5;
+}
 .post-content {
   .links {
     border-top: 1px solid #E5E5E5;
