--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,10 @@
     {% include header.html %}
 
     <div class="content">
-      <div class="page-content">
-        {{ content }}
+      <div class="main">
+        <div class="page-content">
+          {{ content }}
+        </div>
       </div>
       <div class="sidebar">
         <div class="description">
