--- a/css/pizza.scss
+++ b/css/pizza.scss
@@ -67,6 +67,9 @@ h1 {
 
 .desc {
   margin: 10px 0px;
+  em {
+    font-weight: bold;
+  }
 }
 
 @include media-query($on-laptop) {
@@ -82,5 +85,40 @@ h1 {
     float: none;
     width: 100%;
     text-align: left;
+  }
+}
+.copy {
+  font-size: 60%;
+  text-align: center;
+  margin: 10px;
+}
+.signup {
+  font-size: 110%;
+  text-align: center;
+}
+.photos {
+  margin: 10px 0px;
+  background: #000;
+  padding: 15px;
+  text-align:center;
+}
+#mc_embed_signup {
+  padding: 0px 0px 0px 0px;
+  font-weight: bold;
+  label {
+    display: block;
+  }
+  input[type=email] {
+    padding: 4px;
+    width: 100px;
+  }
+  input[type=submit] {
+    font-weight: bold;
+    background: #333;
+    color: #fff;
+    padding: 4px 10px;
+    border: none;
+    display: inline;
+    margin: 10px 0px;
   }
 }
