Add twitter img

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,13 @@
   <meta name="twitter:creator" content="@beatsryetypes">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:image" content="http://beatsryetypes.com/images/brt-art-blakely-header.png">
+  <meta name="twitter:image" content="http://beatsryetypes.com/images/twitter.gif" >
   <meta property="og:url"                content="http://beatsryetypes.com/{{ page.url }}" />
   <meta property="og:type"               content="article" />
   <meta property="og:title"              content="{{ page.title }}" />
   <meta property="og:description"        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta property="og:image"              content="http://beatsryetypes.com/pizza/images/header-large-twitter.jpg"/>
-  <meta property="og:image" content="http://beatsryetypes.com/images/brt-art-blakely-header.png">
+  <meta property="og:image" content="http://beatsryetypes.com/images/twitter.gif">
   <meta property="og:audio" content="{{ page.link }}">
   {% endif %}
 
