Change twitter card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,12 +7,12 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   {% if page.title %}
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@beatsryetypes">
   <meta name="twitter:creator" content="@beatsryetypes">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:image" content="http://beatsryetypes.com/images/twitter.gif" >
+  <meta name="twitter:image" content="http://beatsryetypes.com/images/logo-600.png" >
   <meta property="og:url"                content="http://beatsryetypes.com/{{ page.url }}" />
   <meta property="og:type"               content="article" />
   <meta property="og:title"              content="{{ page.title }}" />
