--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,3 +3,12 @@
       <img src="/images/brt-art-blakely-header.png" alt="Beats, Rye & Types" />
     </a>
 </header>
+<nav>
+  <ul>
+    <li><a href="/podcast">The Podcast</a></li>
+    <li><a href="/tips">Daily Tips</a></li>
+    <li><a href="/guides">Guides</a></li>
+    <li><a href="/news">News</a></li>
+    <li><a href="http://pizza.beatsryetypes.com">The Pizza Book</a></li>
+  </ul>
+</nav>
