Working tip generation and styles

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
   </article>
   <p class="links"><a href="{{ page.link }}"><strong>Download the episode (MP3)</strong></a> | <span class="post-date">{{ page.date | date: "%b %-d, %Y" }}</span></p>
 <h3 class="divider">More Episodes</h3>
-{% for post in site.categories.episodes.posts | sort rand limit: 3 %}
+{% for post in site.categories.episodes | sort rand limit: 3 %}
 {% include tiny_post.html %}
 {% endfor %}
 <h3><a href="/archive.html">View The Full Archive</a></h3>
