Sharing and fix urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-    <a class="site-title" href="{{ site.baseurl }}/">
+    <a class="site-title" href="{{ site.url }}/">
       <img src="/images/brt-art-blakely-header.png" alt="Beats, Rye & Types" />
     </a>
 </header>
