--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,8 @@
   <meta property="og:audio" content="{{ page.link }}">
   {% endif %}
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="http://feeds.feedburner.com/BeatsRyeTypes" />
   <link rel="shortcut icon" type="image/png" href="/images/brt-favicon.png">
 </head>
