--- a/_includes/share.html
+++ b/_includes/share.html
@@ -3,4 +3,4 @@
 {% capture url %}{{ page.url | prepend: site.url }}{% endcapture %}
   <a href="https://twitter.com/intent/tweet?text={{ page.title | uri_escape }}&url={{ url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a> | 
     <a href="https://facebook.com/sharer.php?u={{ url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a> | 
-    <a href="https://plus.google.com/share?url={{ url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a><strong>
+    <a href="https://plus.google.com/share?url={{ url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a></strong>
