--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,6 @@
     <li><a href="/tips">Daily Tips</a></li>
     <!-- <li><a href="/guides">Guides</a></li> -->
     <li><a href="/news">News</a></li>
-    <li><a href="http://beatsryetypes.com/pizza">The Pizza Book</a></li>
+    <li><a href="http://pizza.beatsryetypes.com">The Pizza Book</a></li>
   </ul>
 </nav>
