--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <nav>
   <ul>
     <li><a href="/podcast">The Podcast</a></li>
-    <li><a href="/tips">Daily Tips</a></li>
+    <li><a href="/tips">Tips</a></li>
     <!-- <li><a href="/guides">Guides</a></li> -->
     <li><a href="/news">News</a></li>
     <li><a href="http://pizza.beatsryetypes.com">The Pizza Book</a></li>
